--- a/index.html
+++ b/index.html
@@ -5,83 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon.ico">
+<!--ESTILOS BOOSTRAP-->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 <!--ESTILOS PERSONALIZADOS-->
     <link rel="stylesheet" href="./css/styles.css">
 <!-- ICONOS FONTAWESOME -->
     <script src="https://kit.fontawesome.com/d24b0fed15.js" crossorigin="anonymous"></script>
     <title>DeskUP</title>
 </head>
-<body>
-
+<body class="bg-secondary">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
-    <header class="header">
-        <nav class="header__nav">
-            <div class="header__nav__row">
-                <div>
-                    <a class="nav__logo" href="#">DeskUP</a>
-                </div>
-                <ul id="nav__links">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="./pages/productos.html">Productos</a></li>
-                    <li><a href="./pages/nuestro-trabajo.html">Nuestro trabajo</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                    <li><a href="./pages/acceder.html">Acceder</a></li>
+    <header class="position-fixed w-100 header">
+        <nav class="navbar navbar-expand-lg navbar-light header__nav">
+            <div class="container-fluid header__nav__row">
+              <a class="navbar-brand fs-1 fw-bold" id="nav__logo" href="#">DeskUP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/nuestro-trabajo.html">Nuestro trabajo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/quienes-somos.html">Quiénes somos</a>
+                  </li>
                 </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
 <!-- CONTENIDO PRINCIPAL DE LA PAGINA -->
-    <div class="banner"> <!-- background image -->
-    </div>
-    <main> <!-- contenido -->
-        <div class="main__tittle">
-            <h1>Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
+    <main class="container-fluid px-0">
+    <!--first section-->
+        <div class="banner"></div> <!--background image-->
+        <div class="main__tittle text-light position-absolute top-50 start-50 translate-middle  d-inline-flex py-2 px-2">
+            <h1 class="fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
-        <!--seccion card-->
-        <section class="section__cards">
-            <h2 class="section__cards__tittle">Algunos de nuestros escritorios</h2>
-            <div class="content__cards">
-                <a href="./pages/productos.html" class="card">
-                    <img src="./assets/img/desk1.jpg" alt="">
-                    <h3 class="card__text">Desk XXL</h3>
-                    <p class="card__text">Variedad en cajonera</p>
+    <!--second section-->
+        <div class="container-fluid text-center my-5">
+            <h2 class="text-light mb-5">Has click en algunos de nuestros productos.</h2>
+            <div class="d-flex row justify-content-around">
+                <a href="./pages/productos.htmlgi" class="card mx-3 my-3 col-lg-6 col-md-12 col-sm-12">
+                    <img src="./assets/img/desk5.jpg" alt="Doble escritorio con cajonera" class="card__img">
+                    <span class="card__footer">
+                        <span>Doble escritorio con cajonera</span>
+                    </span>
                 </a>
-                <a href="./pages/productos.html" class="card">
-                    <img src="./assets/img/desk2.jpg" alt="">
-                    <h3 class="card__text">Desk minimalista</h3>
-                    <p class="card__text">Combinacion de melaminas</p>
+                <a href="./pages/productos.html" class="card my-3 mx-3 col-lg-4 col-md-12 col-sm-12">
+                    <img src="./assets/img/desk2.jpg" alt="Escritorio pequeño simple" class="card__img">
+                    <span class="card__footer">
+                        <span>Escritorio corto simple</span>
+                    </span>
+                </a>
+                <a href="./pages/productos.html" class="card my-3 mx-3 col-lg-4 col-md-12 col-sm-12">
+                    <img src="./assets/img/desk3.jpg" alt="Escritorio pequeño simple" class="card__img">
+                    <span class="card__footer">
+                        <span>Escritorio largo con bandeja</span>
+                    </span>
                 </a>
             </div>
-        </section>
+        </div>
     </main>
-
-<!--PIE DE LA PAGINA (FOOTER) -->
-    <footer class="footer">
-        <!--Contenedor del mapa del footer-->
-        <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107012.13976728078!2d-60.67212740536896!3d-33.05306080653934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab1dc9b6d36f%3A0x97b9e9584d94d851!2sMonumento%20Hist%C3%B3rico%20Nacional%20a%20la%20Bandera!5e0!3m2!1ses!2sar!4v1677275397583!5m2!1ses!2sar" width="150" height="80" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
+<!-- PIE DE LA PAGINA (FOOTER) -->
+    <footer class="bg-dark container-fluid d-flex flex-column w-100 text-center">
+        <!--iconos de redes sociales del footer-->
+        <div class="fs-3 pt-2">
+            <a class="mx-2 px-1" target="_blank" href="https://www.instagram.com/romitijere/">
+                <i class="fa-brands fa-instagram footer__icon"></i>
+            </a>
+                <a class="mx-2 px-1" target="_blank" href="https://facebook.com/">
+                <i class="fa-brands fa-facebook footer__icon"></i>
+            </a>
+            <a class="mx-2 px-1" target="_blank" href="https://github.com/jereromiti">
+                <i class="fa-brands fa-github footer__icon"></i>
+            </a>
+            <a class="mx-2 px-1" target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/">
+              <i class="fa-brands fa-linkedin footer__icon"></i>
+            </a>
         </div>
-        <nav class="footer__nav">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/productos.html">Productos</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-            <!-- iconos de redes sociales del footer -->
-            <div class="footer__icons">
-                <a target="_blank" href="https://instagram.com/">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a target="_blank" href="https://facebook.com/">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </div>
-        </nav>
-            <!--Texto de footer-->
-        <div class="footer__text">
-            <p>2023 - Todos los derechos reservados</p>
-            <a target="_blank" href="#">Developed by Jere ♥️</a>
+        <!--Texto de footer-->
+        <div class="footer__text text-light fs-6">
+            <p class="my-0 py-2">DeskUP 2023 - Todos los derechos reservados</p>
+            <a class="text-decoration-none text-light pt-2" target="_blank" href="#">Developed by <span class="text-success">Jere ♥️</span></a>
         </div>
     </footer>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
