se re-organizo el codigo con sass a traves de @imports. Se modifico texto del footer

--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -87,9 +87,9 @@
             </a>
         </div>
         <!--Texto de footer-->
-        <div class="footer__text text-light fs-6">
+        <div class="footer__text text-light">
             <p class="my-0 py-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <a class="text-decoration-none text-light pt-2" target="_blank" href="#">Developed by <span class="text-success">Jere ♥️</span></a>
+            <p>Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
         </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
