--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="container-fluid px-0">
     <!--first section-->
         <div class="banner"></div> <!--background image-->
-        <div class="main__tittle text-light position-absolute top-50 start-50 translate-middle  d-inline-flex py-2 px-2">
+        <div class="main__tittle text-light position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
             <h1 class="fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
     <!--second section-->
@@ -95,9 +95,9 @@
             </a>
         </div>
         <!--Texto de footer-->
-        <div class="footer__text text-light fs-6">
+        <div class="footer__text text-light">
             <p class="my-0 py-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <a class="text-decoration-none text-light pt-2" target="_blank" href="#">Developed by <span class="text-success">Jere ♥️</span></a>
+            <p>Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
         </div>
     </footer>
     <script src="./js/bootstrap.bundle.min.js"></script>
