--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -18,7 +18,7 @@
     <header class="sticky-top header">
         <nav class="navbar navbar-expand-lg navbar-light header__nav">
             <div class="container-fluid header__nav__row ">
-            <a class="navbar-brand fs-1 fw-bold nav__logo " href="#">DeskUP</a>
+            <a class="navbar-brand fs-1 fw-bold nav__logo " href="../index.html">DeskUP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
