se hizo NESTING o Anidacion en todas las hojas posibles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body class="bg-secondary">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
-    <header class="position-fixed w-100 header">
-        <nav class="navbar navbar-expand-lg navbar-light header__nav">
+    <header class="position-fixed w-100">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid header__nav__row">
               <a class="navbar-brand fs-1 fw-bold" id="nav__logo" href="#">DeskUP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
