se animo el footer en todas las paginas

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container-fluid text-center my-5">
             <h2 class="text-light mb-5">Has click en algunos de nuestros productos.</h2>
             <div class="d-flex row justify-content-around">
-                <a href="./pages/productos.htmlgi" class="card mx-3 my-3 col-lg-6 col-md-12 col-sm-12">
+                <a href="./pages/productos.html" class="card mx-3 my-3 col-lg-6 col-md-12 col-sm-12">
                     <img src="./assets/img/desk5.jpg" alt="Doble escritorio con cajonera" class="card__img">
                     <span class="card__footer">
                         <span>Doble escritorio con cajonera</span>
