--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -96,26 +96,26 @@
     </main>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
 <!--PIE DE LA PAGINA (FOOTER) -->
-    <footer class="bg-dark container-fluid d-flex flex-column w-100 text-center">
+    <footer class="bg-dark container-fluid d-flex flex-column w-100 text-center py-4">
         <!--iconos de redes sociales del footer-->
-        <div class="fs-3 pt-2">
-            <a class="mx-2 px-1" target="_blank" href="https://www.instagram.com/romitijere/">
+        <div class="fs-3 mb-3">
+            <a class="mx-2 px-1 footer__a text-decoration-none" target="_blank" href="https://www.instagram.com/romitijere/">
                 <i class="fa-brands fa-instagram footer__icon"></i>
             </a>
-                <a class="mx-2 px-1" target="_blank" href="https://facebook.com/">
+            <a class="mx-2 px-1 footer__a text-decoration-none" target="_blank" href="https://facebook.com/">
                 <i class="fa-brands fa-facebook footer__icon"></i>
             </a>
-            <a class="mx-2 px-1" target="_blank" href="https://github.com/jereromiti">
+            <a class="mx-2 px-1 footer__a text-decoration-none" target="_blank" href="https://github.com/jereromiti">
                 <i class="fa-brands fa-github footer__icon"></i>
             </a>
-            <a class="mx-2 px-1" target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/">
+            <a class="mx-2 px-1 footer__a text-decoration-none" target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/">
             <i class="fa-brands fa-linkedin footer__icon"></i>
             </a>
         </div>
         <!--Texto de footer-->
-        <div class="footer__text text-light">
-            <p class="my-0 py-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <p>Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
+        <div class="footer__text text-light fs-6">
+            <p class="my-0 pb-2">DeskUP 2023 - Todos los derechos reservados</p>
+            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
         </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
