--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-secondary">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
-    <header class="position-fixed w-100">
+    <header class="position-absolute w-100">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid header__nav__row">
               <a class="navbar-brand fs-1 fw-bold" id="nav__logo" href="#">DeskUP</a>
