--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,7 +15,7 @@
 </head>
 <body class="body__bg">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
-    <header class="sticky-top header">
+    <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light header__nav">
             <div class="container-fluid header__nav__row ">
               <a class="navbar-brand fs-1 fw-bold nav__logo " href="../index.html">DeskUP</a>
