se modificaron las paginas añadiendo linea (<b>) a los titulos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,10 +45,13 @@
           </nav>
     </header>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
-    <main class="container-fluid">
+    <main class="main__productos container-fluid">
         <section class="gale container my-5">
-            <h2 class="gale__tittle text-center text-light fw-bold fs-1 mb-5">Nuestros escritorios más destacados</h2>
-            
+            <h1 class="main__tittle d-flex text-center mb-5">
+              <b></b>
+              <span class="text-light mx-4">Nuestros escritorios más destacados</span>
+              <b></b>
+            </h1>
             <div class="gale__bs row justify-content-around">
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
