--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -45,9 +45,13 @@
         </nav>
     </header>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
-    <main class="container-fluid">
-        <h1 class="text-center my-5">Nuestra empresa</h1>
-        <div class="w-75 fs-5 mb-5 text-start mx-auto">
+    <main class="main__qs container-fluid w-50">
+        <h1 class="main__tittle d-flex text-center my-5">
+            <b></b>
+            <span class="mx-4">Nuestra empresa</span>
+            <b></b>
+        </h1>
+        <div class="container__parrafo fs-5 mb-5 mx-auto">
             <p class="pb-3"><strong>DeskUP</strong> es una empresa que inicia sus actividades en 2020 con un importante crecimiento en el rubro del diseño, fabricación y comercialización de muebles para distintos espacios de la vida cotidiana.</p>
             <p class="pb-3">Su fundador, un joven Arquitecto, mantuvo desde sus inicios conceptos firmes que lograron el éxito actual de DeskUP, con objetivos claros a través de la planificación estratégica y la implementación de procesos eficaces como bases fundamentales de la organización.</p>
             <p class="pb-3"><strong>Contamos con un equipo altamente comprometido</strong>, capacitado y profesional que garantiza una excelente atención y asesoría, la eficiencia en todas nuestras operaciones y la calidad de los productos con orientación a la satisfacción de nuestros clientes.</p>
