--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="container-fluid px-0">
     <!--first section-->
         <div class="banner"></div> <!--background image-->
-        <div class="main__tittle text-light position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
+        <div class="index__tittle text-light position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
             <h1 class="fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
     <!--second section-->
