--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,17 +45,20 @@
         </nav>
     </header>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
-    <main class="container-fluid">
+    <main class="main__contact container-fluid w-50">
          <!--Formulario de Contacto-->
         <div class="container">
             <div class="text-center mt-5">
-                <h1 class="mb-2">Contactate con nosotros</h1>
-                <p class="m-0">Te enviaremos noticias y promociones exclusivamente para vos</p>
+                <h1 class="main__tittle d-flex text-center">
+                    <b></b>
+                    <span class="mx-4">Contactate con nosotros</span>
+                    <b></b>
+                </h1>
             </div>
             <div class="form__container row py-2 my-5">
                 <div class="col-md-12">
                     <form class="form-horizontal" method="post">
-                        </div>
+                        <div>
                             <div class="form-group">
                                 <i class="fa fa-user bigicon"></i>
                                 <div class="col-md-8">
