--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -45,24 +45,28 @@
         </nav>
     </header>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
-    <main class="container-fluid px-0">
-        <section class="container text-center mb-5">
-            <h1 class="my-5">Querés saber cómo trabajamos?</h1>
-            <div class="row justify-content-center fw-bold">
-                <article class="col-sm-12 col-md-6 col-lg-4 text-start m-5">
-                    <img class="img-fluid mb-2 np__img" src="../assets/img/svg/idea.svg" alt="">
+    <main class="main__nt container-fluid px-0">
+        <section class="container mb-5">
+            <h1 class="main__tittle d-flex text-center my-5">
+                <b></b>
+                <span class="mx-4">Querés saber cómo trabajamos?</span>
+                <b></b>
+            </h1>
+            <div class="container-fluid row justify-content-center fw-bold">
+                <article class="col-sm-12 col-md-6 col-lg-4 m-3">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/idea.svg" alt="">
                     <p class="inline-block fs-5">· Escuchamos tu idea</p>
                 </article>
-                <article class="col-sm-12 col-md-6 col-lg-4 text-start mx-2">
-                    <img class="img-fluid mb-2 np__img" src="../assets/img/svg/bosquejo.svg" alt="">
+                <article class="col-sm-12 col-md-6 col-lg-4 m-3">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/bosquejo.svg" alt="">
                     <p class="inline-block fs-5">· Creamos un bosquejo o prototipo de tu próximo escritorio.</p>
                 </article>
-                <article class="col-sm-12 col-md-6 col-lg-4 text-start mx-2">
-                    <img class="img-fluid mb-2 np__img" src="../assets/img/svg/planteamos.svg" alt="">
+                <article class="col-sm-12 col-md-6 col-lg-4 m-3">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/planteamos.svg" alt="">
                     <p class="inline-block fs-5">· Definimos materiales y medidas. Te enviaremos un presupuesto.</p>
                 </article>
-                <article class="col-sm-12 col-md-6 col-lg-4 text-start mx-2">
-                    <img class="img-fluid mb-2 np__img" src="../assets/img/svg/entrega.svg" alt="">
+                <article class="col-sm-12 col-md-6 col-lg-4 m-3">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/entrega.svg" alt="">
                     <p class="inline-block fs-5">· Te enviamos el producto final a tu domicilio.</p>
                 </article>
             </div>
