se desarrollo un mapa de colores en Sass

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <main class="container-fluid px-0">
     <!--first section-->
         <div class="banner"></div> <!--background image-->
-        <div class="index__tittle text-light position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
-            <h1 class="fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
+        <div class="index__tittle position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
+            <h1 class="text-light fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
     <!--second section-->
         <div class="container-fluid text-center my-5">
