Se modifoco los ALT de las img de la galeria de la pagina productos.

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -56,63 +56,70 @@
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk1.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk1.jpg" alt="Escritorio para computadoras de color blanco">    
                 </div>
                 <a class="text-light fs-2" href="# ">Escritorio corto simple</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk5.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk5.jpg" alt="Escritorio de color blanco con cajoneras de color negro">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio dobles con cajoneras</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk3.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk3.jpg" alt="Escritorio de color negro con blanco">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio largo con bandeja</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk4.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk4.jpg" alt="Simple escritorio de color blanco y beige">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio oficina y recepción</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk2.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk2.jpg" alt="Escritorio largo de color blanco">    
                 </div>
                 <a class="text-light fs-2" class="" href="#">Escritorio largo sin bandeja</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk6.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk6.jpg" alt="Escritorio con cajoneras de color beige">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio con cajoneras</a>
               </article>
               
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk7.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk7.jpg" alt="Escritorio tipo esquinero con bandeja para CPU">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio esquinero</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk8.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk8.jpg" alt="Escritorio estilo minimalista color blanco y negro con cajon">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio moderno con cajón y archivero</a>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
-                    <img class="img-fluid img-thumbnail" src="../assets/img/desk9.jpg" alt="Cuadro de floreros impresos en 3D">    
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk9.jpg" alt="Escritorio estilo oficina con archiveros">    
+                </div>
+                <a class="text-light fs-2" href="#">Escritorio L oficina productivo</a>
+              </article>
+
+              <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
+                <div class="mb-2">
+                    <img class="img-fluid img-thumbnail" src="../assets/img/desk9.jpg" alt="Escritorio estilo oficina con archiveros">    
                 </div>
                 <a class="text-light fs-2" href="#">Escritorio L oficina productivo</a>
               </article>
