Se creo una ANIMACION en un logo de whatsapp que esta fixeado en todas las paginas, las propiedades de la misma se escribio dentro de un mixin, el cual se aplica dentro de una carpeta (utilidades.scss)

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
         </div>
     </footer>
+    <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="./assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
     <!-- bootstrap  -->
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
