--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,7 +55,7 @@
                     <b></b>
                 </h1>
             </div>
-            <div class="form__container row py-2 my-5">
+            <div class="form__container row py-3 my-5">
                 <div class="col-md-12">
                     <form class="form-horizontal" method="post">
                         <div>
@@ -121,6 +121,7 @@
             <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
         </div>
     </footer>
+    <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="../assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
