--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/d24b0fed15.js" crossorigin="anonymous"></script>
     <title>DeskUP</title>
 </head>
-<body class="bg-secondary">
+<body class="body__main">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="position-absolute w-100">
         <nav class="navbar navbar-expand-lg navbar-light">
