--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="body__main">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="position-absolute w-100">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid header__nav__row">
               <a class="navbar-brand fs-1 fw-bold" id="nav__logo" href="#">DeskUP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
