se coloco los ALTS a las imagenes de nuestro-trabajo

--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -54,19 +54,19 @@
             </h1>
             <div class="container-fluid row justify-content-center fw-bold">
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
-                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/idea.svg" alt="">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/idea.svg" alt="Escuchamos tu idea.">
                     <p class="inline-block fs-5">· Escuchamos tu idea</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
-                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/bosquejo.svg" alt="">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/bosquejo.svg" alt="Creamos un bosquejo o prototipo de tu próximo escritorio.">
                     <p class="inline-block fs-5">· Creamos un bosquejo o prototipo de tu próximo escritorio.</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
-                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/planteamos.svg" alt="">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/planteamos.svg" alt="Definimos materiales y medidas. Te enviaremos un presupuesto.">
                     <p class="inline-block fs-5">· Definimos materiales y medidas. Te enviaremos un presupuesto.</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
-                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/entrega.svg" alt="">
+                    <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/entrega.svg" alt="Te enviamos el producto final a tu domicilio">
                     <p class="inline-block fs-5">· Te enviamos el producto final a tu domicilio.</p>
                 </article>
             </div>
