Se creo un boton 'sobre nosotros' en la seccion principal de la pagina. Se reacomodaron los containers en la galeria del sitio.

--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
           </nav>
     </header>
 <!-- CONTENIDO PRINCIPAL DE LA PAGINA -->
-    <main class="container-fluid px-0">
+    <main class="container-fluid p-0">
     <!--first section-->
         <div class="banner"></div> <!--background image-->
-        <div class="index__tittle position-absolute top-50 start-50 translate-middle d-inline-flex py-2 px-2">
-            <h1 class="text-light fw-bold fs-2">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
+        <div class="index__tittle position-absolute top-50 start-50 translate-middle p-2">
+            <h1 class="text-light fw-bold fs-2 m-0">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
+        <a href="./pages/quienes-somos.html" class="index__btn__sb position-absolute bottom-0 ms-4 mb-5 p-2 fs-5">
+            Sobre nosotros
+        </a>
     <!--second section-->
         <div class="container-fluid text-center my-5">
             <h2 class="text-light mb-5">Has click en algunos de nuestros productos.</h2>
