--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,83 +45,83 @@
           </nav>
     </header>
     <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
-    <main class="main__productos container-fluid">
-        <section class="gale container my-5">
+    <main class="main__productos container">
+        <section class="gale my-5">
             <h1 class="main__tittle d-flex text-center mb-5">
               <b></b>
               <span class="text-light mx-4">Nuestros escritorios más destacados</span>
               <b></b>
             </h1>
-            <div class="gale__bs row justify-content-around">
+            <div class="container-fluid gale__bs row justify-content-around">
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk1.jpg" alt="Escritorio para computadoras de color blanco">    
                 </div>
-                <a class="text-light fs-2" href="# ">Escritorio corto simple</a>
+                <p class="text-light fs-2">Escritorio corto simple</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk5.jpg" alt="Escritorio de color blanco con cajoneras de color negro">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio dobles con cajoneras</a>
+                <p class="text-light fs-2">Escritorio dobles con cajoneras</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk3.jpg" alt="Escritorio de color negro con blanco">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio largo con bandeja</a>
+                <p class="text-light fs-2">Escritorio largo con bandeja</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk4.jpg" alt="Simple escritorio de color blanco y beige">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio oficina y recepción</a>
+                <p class="text-light fs-2">Escritorio oficina y recepción</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk2.jpg" alt="Escritorio largo de color blanco">    
                 </div>
-                <a class="text-light fs-2" class="" href="#">Escritorio largo sin bandeja</a>
+                <p class="text-light fs-2" class="">Escritorio largo sin bandeja</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk6.jpg" alt="Escritorio con cajoneras de color beige">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio con cajoneras</a>
+                <p class="text-light fs-2">Escritorio con cajoneras</p>
               </article>
               
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk7.jpg" alt="Escritorio tipo esquinero con bandeja para CPU">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio esquinero</a>
+                <p class="text-light fs-2">Escritorio esquinero</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk8.jpg" alt="Escritorio estilo minimalista color blanco y negro con cajon">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio moderno con cajón y archivero</a>
+                <p class="text-light fs-2">Escritorio moderno con cajón y archivero</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk9.jpg" alt="Escritorio estilo oficina con archiveros">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio L oficina productivo</a>
+                <p class="text-light fs-2">Escritorio L oficina productivo</p>
               </article>
 
               <article class="col-lg-4 col-md-6 col-sm-12 m-5 text-center">
                 <div class="mb-2">
                     <img class="img-fluid img-thumbnail" src="../assets/img/desk9.jpg" alt="Escritorio estilo oficina con archiveros">    
                 </div>
-                <a class="text-light fs-2" href="#">Escritorio L oficina productivo</a>
+                <p class="text-light fs-2">Escritorio L oficina productivo</p>
               </article>
 
             </div>
