se aplicaron tecnicas de SEO ON PAGE en todas las seccione del sitio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DeskUP es un sitio web de escritorios modernos para computadoras y oficinas.">
+    <meta name="keywords"  content="escritorios, muebles, oficina, computadora, moderno, minimalista">
     <link rel="shortcut icon" href="./favicon.ico">
 <!--ESTILOS BOOSTRAP-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
