--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DeskUP es una empresa dedicada a la creación de escritorios para distintos espacios de la vida cotidiana.">
+    <meta name="keywords"  content="escritorios, muebles, oficina, computadora, moderno, minimalista, informacion, sobre nosotros">
     <link rel="shortcut icon" href="../favicon.ico">
 <!--ESTILOS BOOSTRAP-->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -52,7 +54,7 @@
             <b></b>
         </h1>
         <div class="container__parrafo fs-5 mb-5 mx-auto">
-            <p class="pb-3"><strong>DeskUP</strong> es una empresa que inicia sus actividades en 2020 con un importante crecimiento en el rubro del diseño, fabricación y comercialización de muebles para distintos espacios de la vida cotidiana.</p>
+            <p class="pb-3"><strong>DeskUP</strong> es una empresa que inicia sus actividades en 2020 con un importante crecimiento en el rubro del diseño, fabricación y comercialización de escritorios para distintos espacios de la vida cotidiana.</p>
             <p class="pb-3">Su fundador, un joven Arquitecto, mantuvo desde sus inicios conceptos firmes que lograron el éxito actual de DeskUP, con objetivos claros a través de la planificación estratégica y la implementación de procesos eficaces como bases fundamentales de la organización.</p>
             <p class="pb-3"><strong>Contamos con un equipo altamente comprometido</strong>, capacitado y profesional que garantiza una excelente atención y asesoría, la eficiencia en todas nuestras operaciones y la calidad de los productos con orientación a la satisfacción de nuestros clientes.</p>
             <p class="pb-3">Nuestro sistema de fabricación en serie es optimizado con maquinaria de última generación, aprovechando al máximo los recursos y garantizando la calidad de terminaciones, obteniendo así, <strong>productos con un valor final atractivamente asequibles</strong></p>
