--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Comunicate con DeskUP en este formulario de contacto">
+    <meta name="keywords"  content="escritorios, muebles, oficina, computadora, moderno, minimalista, contacto, contactate">
     <link rel="shortcut icon" href="../favicon.ico">
 <!--ESTILOS BOOSTRAP-->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
