--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te mostramos cuál es nuestra operación de trabajo para que tengas tu nuevo escritorio.">
+    <meta name="keywords"  content="escritorios, muebles, oficina, computadora, moderno, minimalista, diseño, envio, trabajo">
     <link rel="shortcut icon" href="../favicon.ico">
 <!--ESTILOS BOOSTRAP-->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
