se modificaron las cards de la pagina principal

--- a/index.html
+++ b/index.html
@@ -53,30 +53,25 @@
         <div class="index__tittle position-absolute top-50 start-50 translate-middle p-2">
             <h1 class="text-light fw-bold fs-2 m-0">Estás buscando tu nuevo escritorio? <span>Estás en el lugar correcto.</span></h1>
         </div>
-        <a href="./pages/quienes-somos.html" class="index__btn__sb position-absolute bottom-0 ms-4 mb-5 p-2 fs-5">
-            Sobre nosotros
-        </a>
+        <a href="./pages/quienes-somos.html" class="index__btn__sb position-absolute bottom-0 ms-4 mb-5 p-2 fs-5">Sobre nosotros</a>
     <!--second section-->
         <div class="container-fluid text-center my-5">
-            <h2 class="text-light mb-5">Has click en algunos de nuestros productos.</h2>
-            <div class="d-flex row justify-content-around">
-                <a href="./pages/productos.html" class="card mx-3 my-3 col-lg-6 col-md-12 col-sm-12">
-                    <img src="./assets/img/desk5.jpg" alt="Doble escritorio con cajonera" class="card__img">
-                    <span class="card__footer">
-                        <span>Doble escritorio con cajonera</span>
-                    </span>
+            <h2 class="text-light my-3">Has click en algunos de nuestros productos.</h2>
+            <div class="content__cards row">
+                <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12 ">
+                    <img src="./assets/img/desk1.jpg" alt="Escritorio corto con bandeja">
+                    <h3 class="text-light fs-3">Desk Large</h3>
+                    <p class="text-light fs-6">Escritorio corto con bandeja</p>
                 </a>
-                <a href="./pages/productos.html" class="card my-3 mx-3 col-lg-4 col-md-12 col-sm-12">
-                    <img src="./assets/img/desk2.jpg" alt="Escritorio pequeño simple" class="card__img">
-                    <span class="card__footer">
-                        <span>Escritorio corto simple</span>
-                    </span>
+                <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12">
+                    <img src="./assets/img/desk3.jpg" alt="Escritorio largo con combinación de melaminas">
+                    <h3 class="text-light fs-3">Desk XXL</h3>
+                    <p class="text-light fs-6">Escritorio largo con variedad de melaminas</p>
                 </a>
-                <a href="./pages/productos.html" class="card my-3 mx-3 col-lg-4 col-md-12 col-sm-12">
-                    <img src="./assets/img/desk3.jpg" alt="Escritorio pequeño simple" class="card__img">
-                    <span class="card__footer">
-                        <span>Escritorio largo con bandeja</span>
-                    </span>
+                <a href="./pages/productos.html" class="card col-lg-4 col-md-12 col-sm-12">
+                    <img src="./assets/img/desk2.jpg" alt="Escritorio tamaño mediano de color blanco simple">
+                    <h3 class="text-light fs-3">Desk XL</h3>
+                    <p class="text-light fs-6">Escritorio mediano de melamina simple</p>
                 </a>
             </div>
         </div>
