--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="#">Inicio</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/productos.html">Productos</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/nuestro-trabajo.html">Nuestro trabajo</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/nuestro-trabajo.html">Nuestro trabajo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/contacto.html">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/quienes-somos.html">Quiénes somos</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/quienes-somos.html">Quiénes somos</a>
                   </li>
                 </ul>
               </div>
