--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,19 +60,19 @@
             <div class="form__container col-lg-12 row p-3 my-5">
                 <form action="./404.html" class="form-horizontal" method="post">
                     <div class="form-group mb-3">
-                        <i class="fa fa-user bigicon"></i>
+                        <i class="fa fa-user bigicon m-2"></i>
                         <input name="name" type="text" placeholder="Nombre y apellido" class="form-control" required>
                     </div>
                     <div class="form-group mb-3">
-                        <i class="fa fa-envelope-o bigicon"></i>
+                        <i class="fa fa-envelope-o bigicon m-2"></i>
                         <input name="email" type="email" placeholder="Correo electrónico" class="form-control" required>
                     </div>
                     <div class="form-group mb-3">
-                        <i class="fa fa-phone-square bigicon"></i>
+                        <i class="fa fa-phone-square bigicon m-2"></i>
                         <input name="phone" type="text" placeholder="Teléfono" class="form-control" required>
                     </div>
                     <div class="form-group mb-3">
-                        <i class="fa fa-pencil-square-o bigicon"></i>
+                        <i class="fa fa-pencil-square-o bigicon m-2"></i>
                         <textarea class="form-control" id="message" name="message" placeholder="Comentario (opcional)" rows="7"></textarea>
                     </div>
                     <div>
