--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
                     </div>
                     <div>
                         <button type="submit" class="btn btn-primary me-3">Enviar</button>
-                        <button type="reset" class="btn btn-primary">Limpiar</button>
+                        <button type="reset" class="btn btn--danger btn-primary">Limpiar</button>
                     </div>
                 </form>
             </div>
