footer: se cambio el color del footer por un color gradiente que se agrego en las variables, se modifico el style del link del texto 'jere'. Paginas Generales: se invirtieron los colores, tanto del fondo del body como de las fuentes. En el header, el icono de hamburguesa se cambio el color a blanco.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     <header class="position-absolute w-100">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid header__nav__row">
-              <a class="navbar-brand fs-1 fw-bold" id="nav__logo" href="#">DeskUP</a>
+              <a class="navbar-brand fs-1 fw-bold nav__logo" href="#">DeskUP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="#">Inicio</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/productos.html">Productos</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/nuestro-trabajo.html">Nuestro trabajo</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/nuestro-trabajo.html">Nuestro trabajo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/contacto.html">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-5 px-1 py-1" id="nav__link--index" href="./pages/quienes-somos.html">Quiénes somos</a>
+                    <a class="nav-link me-5 px-1 py-1" id="nav__link" href="./pages/quienes-somos.html">Quiénes somos</a>
                   </li>
                 </ul>
               </div>
@@ -97,7 +97,7 @@
         <!--Texto de footer-->
         <div class="footer__text text-light fs-6">
             <p class="my-0 pb-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
+            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="jere">Jere ♥️</a></p>
         </div>
     </footer>
     <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="./assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
