--- a/pages/nuestro-trabajo.html
+++ b/pages/nuestro-trabajo.html
@@ -18,7 +18,7 @@
 <body class="body__bg">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light header__nav">
+        <nav class="navbar navbar-expand-lg navbar-dark header__nav">
             <div class="container-fluid header__nav__row ">
             <a class="navbar-brand fs-1 fw-bold nav__logo " href="../index.html">DeskUP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,25 +51,25 @@
         <section class="container mb-5">
             <h1 class="main__tittle d-flex text-center my-5">
                 <b></b>
-                <span class="mx-4">Querés saber cómo trabajamos?</span>
+                <span class="mx-4 text-light">Querés saber cómo trabajamos?</span>
                 <b></b>
             </h1>
             <div class="container-fluid row justify-content-center fw-bold">
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
                     <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/idea.svg" alt="Escuchamos tu idea.">
-                    <p class="inline-block fs-5">· Escuchamos tu idea</p>
+                    <p class="inline-block fs-5 text-light">· Escuchamos tu idea</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
                     <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/bosquejo.svg" alt="Creamos un bosquejo o prototipo de tu próximo escritorio.">
-                    <p class="inline-block fs-5">· Creamos un bosquejo o prototipo de tu próximo escritorio.</p>
+                    <p class="inline-block fs-5 text-light">· Creamos un bosquejo o prototipo de tu próximo escritorio.</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
                     <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/planteamos.svg" alt="Definimos materiales y medidas. Te enviaremos un presupuesto.">
-                    <p class="inline-block fs-5">· Definimos materiales y medidas. Te enviaremos un presupuesto.</p>
+                    <p class="inline-block fs-5 text-light">· Definimos materiales y medidas. Te enviamos un presupuesto.</p>
                 </article>
                 <article class="col-sm-12 col-md-6 col-lg-4 m-3">
                     <img class="img-fluid mb-4 nt__img" src="../assets/img/svg/entrega.svg" alt="Te enviamos el producto final a tu domicilio">
-                    <p class="inline-block fs-5">· Te enviamos el producto final a tu domicilio.</p>
+                    <p class="inline-block fs-5 text-light">· Te enviamos el producto final a tu domicilio.</p>
                 </article>
             </div>
         </section>
@@ -95,7 +95,7 @@
         <!--Texto de footer-->
         <div class="footer__text text-light fs-6">
             <p class="my-0 pb-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
+            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="jere">Jere ♥️</a></p>
         </div>
     </footer>
     <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="../assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
