--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -18,7 +18,7 @@
 <body class="body__bg">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light header__nav">
+        <nav class="navbar navbar-expand-lg navbar-dark header__nav">
             <div class="container-fluid header__nav__row ">
             <a class="navbar-brand fs-1 fw-bold nav__logo " href="../index.html">DeskUP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,10 +50,10 @@
     <main class="main__qs container-fluid w-50">
         <h1 class="main__tittle d-flex text-center my-5">
             <b></b>
-            <span class="mx-4">Nuestra empresa</span>
+            <span class="mx-4 text-light">Nuestra empresa</span>
             <b></b>
         </h1>
-        <div class="container__parrafo fs-5 mb-5 mx-auto">
+        <div class="container__parrafo fs-5 mb-5 mx-auto text-light">
             <p class="pb-3"><strong>DeskUP</strong> es una empresa que inicia sus actividades en 2020 con un importante crecimiento en el rubro del diseño, fabricación y comercialización de escritorios para distintos espacios de la vida cotidiana.</p>
             <p class="pb-3">Su fundador, un joven Arquitecto, mantuvo desde sus inicios conceptos firmes que lograron el éxito actual de DeskUP, con objetivos claros a través de la planificación estratégica y la implementación de procesos eficaces como bases fundamentales de la organización.</p>
             <p class="pb-3"><strong>Contamos con un equipo altamente comprometido</strong>, capacitado y profesional que garantiza una excelente atención y asesoría, la eficiencia en todas nuestras operaciones y la calidad de los productos con orientación a la satisfacción de nuestros clientes.</p>
@@ -83,7 +83,7 @@
         <!--Texto de footer-->
         <div class="footer__text text-light fs-6">
             <p class="my-0 pb-2">DeskUP 2023 - Todos los derechos reservados</p>
-            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
+            <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="jere">Jere ♥️</a></p>
         </div>
     </footer>
     <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="../assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
