--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,7 +18,7 @@
 <body class="body__bg">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light header__nav">
+        <nav class="navbar navbar-expand-lg navbar-dark header__nav">
             <div class="container-fluid header__nav__row ">
               <a class="navbar-brand fs-1 fw-bold nav__logo " href="../index.html">DeskUP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
             </div>
           </nav>
     </header>
-    <hr class="m-0 py-1 text-light "> <!--linea divisoria-->
+    <hr class="m-0 py-1 text-light"> <!--linea divisoria-->
     <main class="main__productos container">
         <section class="gale my-5">
             <h1 class="main__tittle d-flex text-center mb-5">
@@ -150,7 +150,7 @@
     <!--Texto de footer-->
     <div class="footer__text text-light fs-6">
         <p class="my-0 pb-2">DeskUP 2023 - Todos los derechos reservados</p>
-        <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="text-decoration-none text-success">Jere ♥️</a></p>
+        <p class="mb-0">Developed by <a target="_blank" href="https://www.linkedin.com/in/jerem%C3%ADas-romiti-6a7943263/" class="jere">Jere ♥️</a></p>
     </div>
   </footer>
   <a href="https://web.whatsapp.com/" target="_blank"><img id="wspFixed" src="../assets/img/svg/wsp.svg" alt="Contactanos por Whatsapp"></a>
