--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/d24b0fed15.js" crossorigin="anonymous"></script>
     <title>DeskUP</title>
 </head>
-<body class="body__main">
+<body class="body__bg">
 <!-- CABEZERA DE LA PAGINA Y LINKS DE NAVEGACION -->
     <header class="position-absolute w-100">
         <nav class="navbar navbar-expand-lg navbar-dark">
